$Id$


v0.91.13	12-Oct-2007

	mbcico:
		Added GeoIP support.

	mbsebbs:
		Added GeoIP support.

	mbnewusr:
		Added GeoIP support.

	mbnntp:
		Added GeoIP support.
		Removed a lot of debug logging.

	mbsetup:
		Blocked selection of FTN and Usenet moderated message areas.
		Changed the F-PROT scanner name into fpscan.


v0.91.12	24-Sep-2007 - 12-Oct-2007

	libmsgbase:
		Adjust lastread pointers too if they point to a deleted msg.

	mbsebbs:
		Added missing check to see if a user is allowed to post or
		reply a message.

	mbfido:
		Fixed buffer overwrite caused by bad formatted ticfiles.


v0.91.11	02-Sep-2007 - 24-Sep-2007

	libmbse:
		Removed some logging and code cleanup in the chartran code.

	libmsgbase:
		Added missing record counter when searching GoldED wrong LR
		pointers and forgot to write fixed LR records.

	mbcico:
		Fixed outbound scanning on ARM systems.

	mbfido:
		Fixed date conversion in netmail-email gate.

	mbtask:
		Fixed outbound scanning on ARM systems.
		Fixed a variable formatting.


v0.91.10	21-Aug-2007 - 02-Sep-2007

	general:
		There is some experimental code for GeoIP support, it does
		nothing if you don't have the library and tools. But if you do
		have it, mbcico logs the country and city of the incoming
		calls depending on the databases you have installed.
		Added example telnet login for NetBSD.
		Dropped support for NetBSD < 3.0.
		Added support for Ubuntu.

	libmbse:
		Added support or the ARM processor, thanks to Simon Voortman.
		Fixed compile without iconv support.

	libdiesel:
		Fixed linking problem on OpenBSD.

	libmsgbase:
		Added extra debug info in pack function.
		Only adjust LR pointers if they must be changed to save some
		disk i/o.
		LastRead records that don't belong to a valid user are
		purged.
		LastRead pointers are searched via an alternate method if the
		record is created by GoldED.
		Don't purge GoldED style LastRead records but fix them.

	mbcico:
		Fixed a lot of compiler warnings.