@@ -16,9 +16,13 @@ v0.91.13	12-Oct-2007
 		Added GeoIP support.
 		Removed a lot of debug logging.
 
+	mbaff:
+		Fixed filefind search filenames case insensitive.
+
 	mbsetup:
 		Blocked selection of FTN and Usenet moderated message areas.
 		Changed the F-PROT scanner name into fpscan.
+		Removed not used setting for filefind.
 
 
 v0.91.12	24-Sep-2007 - 12-Oct-2007
